# mini-json-parser

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  error.h  json_element.h  parser.h  scanner.h
src/: CMakeLists.txt  json_element.cc  parser.cc  run.cc  scanner.cc
test/: CMakeLists.txt  test_parser.cc  test_scanner.cc
